--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
       font-family: "Helvetica Neue", Arial, sans-serif;
     }
     #content {
-      max-width: 400px;
+      max-width: 500px;
       text-align: center;
       background: #fff;
-      padding: 30px 20px;
-      border-radius: 16px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      padding: 50px 30px;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.12);
     }
     h1 {
-      font-size: 22px;
-      margin-bottom: 15px;
-      color: #222;
+      font-size: 28px;
+      margin-bottom: 25px;
+      color: #111;
+      font-weight: bold;
     }
     p {
-      font-size: 18px;
-      color: #444;
-      line-height: 1.5;
+      font-size: 22px;
+      color: #333;
+      line-height: 1.6;
+      font-weight: 500;
     }
     strong {
       color: #000;
+      font-weight: 700;
     }
     .emoji {
-      font-size: 26px;
-      margin-bottom: 10px;
+      font-size: 42px;
+      margin-bottom: 20px;
       display: block;
     }
   </style>
