--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
       font-family: "Helvetica Neue", Arial, sans-serif;
     }
     #content {
-      max-width: 500px;
+      max-width: 900px;
       text-align: center;
       background: #fff;
       padding: 20px;
       border-radius: 20px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.12);
     }
+
     img {
-      max-width: 100%;
+      width: 90vw;     /* fills 90% of screen width */
+      max-width: 900px;
       height: auto;
       display: block;
       margin: 0 auto;
