--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       //     <p>Klick uf ⋮ (drei Tüpfl obe rächts) und nimm <strong>“Im Browser öffnen”</strong>, denn gahts wiiter.</p>
       //   </div>`;
     } else {
-      window.location.href = "https://linktr.ee/leawyss";
+      // window.location.href = "https://linktr.ee/leawyss";
+      window.location.href = "https://instagram.com/_u/wyss.lea1"
     }
   </script>
 </body>
