--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     if (isTikTokBrowser()) {
       document.getElementById("content").innerHTML = `
-        <img src="browser-image.jpeg" alt="Open in browser instructions">
+        <img src="browser-image-shower.png" alt="Open in browser instructions">
       `;
 
       // Show instructions as text
